// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Rg.woff\\") format(\\"woff\\");
    font-display: optional;
  }"
`;

exports[`should match base font url 2`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_It.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_It.woff\\") format(\\"woff\\");
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match base font url 3`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Bd.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-display: optional;
  }"
`;

exports[`should match base font url 4`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_BdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_BdIt.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match base font url 5`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Lt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Lt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-display: optional;
  }"
`;

exports[`should match base font url 6`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_LtIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_LtIt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match base font url 7`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Md.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Md.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-display: optional;
  }"
`;

exports[`should match base font url 8`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_MdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_MdIt.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match base font url 9`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_ExBd.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_ExBd.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-display: optional;
  }"
`;

exports[`should match base font url 10`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_ExBdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_ExBdIt.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match base font url 11`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Rg.woff\\") format(\\"woff\\");
    font-display: optional;
  }"
`;

exports[`should match base font url 12`] = `
"
    @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_It.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_It.woff\\") format(\\"woff\\");
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match base font url 13`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Bd.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-display: optional;
  }"
`;

exports[`should match base font url 14`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_BdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_BdIt.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match base font url 15`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Lt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Lt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-display: optional;
  }"
`;

exports[`should match base font url 16`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_LtIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_LtIt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match base font url 17`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Md.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Md.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-display: optional;
  }"
`;

exports[`should match base font url 18`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_MdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_MdIt.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match base font url 19`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_ExBd.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_ExBd.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-display: optional;
  }"
`;

exports[`should match base font url 20`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_ExBdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_ExBdIt.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match base font url 21`] = `
"
    @font-face {
        font-family: \\"ReithSansCondensed\\";
        src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSansCd_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSansCd_W_Rg.woff\\") format(\\"woff\\");
        font-display: optional;
    }"
`;

exports[`should match base font url 22`] = `
"
    @font-face {
        font-family: \\"ReithSansCondensed\\";
        font-weight: 700;
        src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSansCd_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSansCd_W_Bd.woff\\") format(\\"woff\\");
        font-display: optional;
    }"
`;

exports[`should match base font url 23`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Arabic\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NassimArabic/v1.441/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimArabic/v1.441/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimArabic/v1.441/normal.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match base font url 24`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Arabic\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NassimArabic/v1.441/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimArabic/v1.441/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimArabic/v1.441/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match base font url 25`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Pashto\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPashto/v1.57/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPashto/v1.57/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPashto/v1.57/normal.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match base font url 26`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Pashto\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPashto/v1.57/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPashto/v1.57/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPashto/v1.57/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match base font url 27`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Persian\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPersian/v1.511/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPersian/v1.511/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPersian/v1.511/normal.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match base font url 28`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Persian\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPersian/v1.511/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPersian/v1.511/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPersian/v1.511/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match base font url 29`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Urdu\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NassimUrdu/v1.60/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimUrdu/v1.60/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimUrdu/v1.60/normal.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match base font url 30`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Urdu\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NassimUrdu/v1.60/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimUrdu/v1.60/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimUrdu/v1.60/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match base font url 31`] = `
"
  @font-face {
    font-family: \\"Iskoola Pota BBC\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/IskoolaPota/v5.91/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/IskoolaPota/v5.91/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/IskoolaPota/v5.91/normal.ttf') format('ttf');
    font-display: swap;
  }"
`;

exports[`should match base font url 32`] = `
"
  @font-face {
    font-family: \\"Iskoola Pota BBC\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/IskoolaPota/v5.91/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/IskoolaPota/v5.91/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/IskoolaPota/v5.91/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`should match base font url 33`] = `
"
  @font-face {
    font-family: \\"Latha\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/Latha/v5.90/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/Latha/v5.90/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/Latha/v5.90/normal.ttf') format('ttf');
    font-display: swap;
  }"
`;

exports[`should match base font url 34`] = `
"
  @font-face {
    font-family: \\"Latha\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/Latha/v5.90/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/Latha/v5.90/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/Latha/v5.90/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`should match base font url 35`] = `
"
  @font-face {
    font-family: \\"Mallanna\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/Mallanna/v1.0.4/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/Mallanna/v1.0.4/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/Mallanna/v1.0.4/normal.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`should match base font url 36`] = `
"
  @font-face {
    font-family: \\"Noto Sans Ethiopic\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/normal.ttf') format('ttf');
    font-display: swap;
  }
  "
`;

exports[`should match base font url 37`] = `
"
  @font-face {
    font-family: \\"Noto Sans Ethiopic\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`should match base font url 38`] = `
"
  @font-face {
    font-family: \\"Padauk\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/normal.ttf') format('ttf');
    font-display: swap; 
  }"
`;

exports[`should match base font url 39`] = `
"
  @font-face {
    font-family: \\"Padauk\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`should match base font url 40`] = `
"
  @font-face {
    font-family: \\"Shonar Bangla\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/ShonarBangla/v5.91/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/ShonarBangla/v5.91/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/ShonarBangla/v5.91/normal.ttf') format('ttf');
    font-display: optional;
  }"
`;

exports[`should match base font url 41`] = `
"
  @font-face {
    font-family: \\"Shonar Bangla\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/ShonarBangla/v5.91/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/ShonarBangla/v5.91/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/ShonarBangla/v5.91/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match the overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_Rg.woff\\") format(\\"woff\\");
    font-display: optional;
  }"
`;

exports[`should match the overridden url 2`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_It.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_It.woff\\") format(\\"woff\\");
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 3`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_Bd.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 4`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_BdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_BdIt.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 5`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_Lt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_Lt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 6`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_LtIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_LtIt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 7`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_Md.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_Md.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 8`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_MdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_MdIt.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 9`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_ExBd.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_ExBd.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 10`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_ExBdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_ExBdIt.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 11`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_Rg.woff\\") format(\\"woff\\");
    font-display: optional;
  }"
`;

exports[`should match the overridden url 12`] = `
"
    @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_It.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_It.woff\\") format(\\"woff\\");
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 13`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_Bd.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 14`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_BdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_BdIt.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 15`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_Lt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_Lt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 16`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_LtIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_LtIt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 17`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_Md.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_Md.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 18`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_MdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_MdIt.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 19`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_ExBd.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_ExBd.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 20`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_ExBdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_ExBdIt.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`should match the overridden url 21`] = `
"
    @font-face {
        font-family: \\"ReithSansCondensed\\";
        src: url(\\"https://example.com/BBCReithSansCd_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSansCd_W_Rg.woff\\") format(\\"woff\\");
        font-display: optional;
    }"
`;

exports[`should match the overridden url 22`] = `
"
    @font-face {
        font-family: \\"ReithSansCondensed\\";
        font-weight: 700;
        src: url(\\"https://example.com/BBCReithSansCd_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSansCd_W_Bd.woff\\") format(\\"woff\\");
        font-display: optional;
    }"
`;

exports[`should match the overridden url 23`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Arabic\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match the overridden url 24`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Arabic\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match the overridden url 25`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Pashto\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match the overridden url 26`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Pashto\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match the overridden url 27`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Persian\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPersian/v1.511/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match the overridden url 28`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Persian\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NassimPersian/v1.511/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match the overridden url 29`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Urdu\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match the overridden url 30`] = `
"
  @font-face {
    font-family: \\"BBC Nassim Urdu\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`should match the overridden url 31`] = `
"
  @font-face {
    font-family: \\"Iskoola Pota BBC\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: swap;
  }"
`;

exports[`should match the overridden url 32`] = `
"
  @font-face {
    font-family: \\"Iskoola Pota BBC\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`should match the overridden url 33`] = `
"
  @font-face {
    font-family: \\"Latha\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: swap;
  }"
`;

exports[`should match the overridden url 34`] = `
"
  @font-face {
    font-family: \\"Latha\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`should match the overridden url 35`] = `
"
  @font-face {
    font-family: \\"Mallanna\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`should match the overridden url 36`] = `
"
  @font-face {
    font-family: \\"Noto Sans Ethiopic\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: swap;
  }
  "
`;

exports[`should match the overridden url 37`] = `
"
  @font-face {
    font-family: \\"Noto Sans Ethiopic\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`should match the overridden url 38`] = `
"
  @font-face {
    font-family: \\"Padauk\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: swap; 
  }"
`;

exports[`should match the overridden url 39`] = `
"
  @font-face {
    font-family: \\"Padauk\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`should match the overridden url 40`] = `
"
  @font-face {
    font-family: \\"Shonar Bangla\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: optional;
  }"
`;

exports[`should match the overridden url 41`] = `
"
  @font-face {
    font-family: \\"Shonar Bangla\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;
